--- a/app.json
+++ b/app.json
@@ -1,13 +1,14 @@
 {
   "pages":[
+    "pages/mine/profile",
     "pages/rollcall/index",
     "pages/rollcall/add",
     "pages/rollcall/ongoing",
     "pages/rollcall/call",
     "pages/rollcall/detail",
-    "pages/mine/profile",
     "pages/mine/class",
     "pages/mine/about",
+    "pages/mine/changename",
     "pages/class/add"
   ],
   "window":{
