--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages":[
+    "pages/start/setname",
     "pages/rollcall/index",
     "pages/rollcall/add",
     "pages/rollcall/owner_ongoing",
