add student detail

--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "pages/rollcall/student_ongoing",
     "pages/rollcall/owner_call",
     "pages/rollcall/student_call",
-    "pages/rollcall/detail",
+    "pages/rollcall/owner_detail",
+    "pages/rollcall/student_detail",
     "pages/mine/profile",
     "pages/mine/class",
     "pages/mine/about",
